[package]
name = "tombi-formatter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
itertools.workspace = true
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
tokio.workspace = true
tombi-ast.workspace = true
tombi-ast-editor.workspace = true
tombi-comment-directive.workspace = true
tombi-config.workspace = true
tombi-diagnostic.workspace = true
tombi-parser.workspace = true
tombi-schema-store.workspace = true
tombi-syntax.workspace = true
tombi-uri.workspace = true
tombi-validator.workspace = true
tracing.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
textwrap.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tombi-test-lib.workspace = true

[features]
jsonschema = ["dep:schemars", "serde"]
serde = ["dep:serde"]
