[package]
name = "tombi-glob"
version.workspace = true
edition = "2021"

[[bin]]
name = "profile"
path = "src/bin/profile.rs"
required-features = ["serde_tombi", "tombi_config"]

[dependencies]
fast-glob = "0.3.0"
ignore = "0.4.20"
rayon = "1.10.0"
serde_tombi = { workspace = true, optional = true }
thiserror = "2.0.12"
tombi-config = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5"
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
default = []
profile = ["dep:serde_tombi", "dep:tombi-config"]
