[package]
name = "tombi-glob"
version.workspace = true
edition = "2021"

[[bin]]
name = "profile"
path = "src/bin/profile.rs"
required-features = ["profile"]

[dependencies]
fast-glob.workspace = true
ignore.workspace = true
rayon.workspace = true
serde_tombi = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tombi-config = { workspace = true }
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
default = []
profile = ["dep:serde_tombi"]
