[package]
name = "tombi-json-value"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
tombi-hashmap.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]
