[package]
name = "tombi-lexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tombi-regex.workspace = true
tombi-syntax.workspace = true
tombi-text.workspace = true
tracing.workspace = true

[dev-dependencies]
itertools.workspace = true
pretty_assertions.workspace = true
textwrap.workspace = true
tombi-test-lib.workspace = true
