[package]
name = "tombi-linter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
itertools.workspace = true
thiserror.workspace = true
tombi-ast.workspace = true
tombi-config.workspace = true
tombi-diagnostic.workspace = true
tombi-document-tree.workspace = true
tombi-parser.workspace = true
tombi-schema-store.workspace = true
tombi-text.workspace = true
tombi-validator.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros", "fs"] }
tombi-test-lib.workspace = true
tombi-schema-store = { workspace = true, features = ["native"] }
