[package]
name = "tombi-linter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
itertools.workspace = true
thiserror.workspace = true
tombi-ast.workspace = true
tombi-comment-directive.workspace = true
tombi-comment-directive-serde.workspace = true
tombi-config.workspace = true
tombi-diagnostic.workspace = true
tombi-document-tree.workspace = true
tombi-future.workspace = true
tombi-parser.workspace = true
tombi-schema-store.workspace = true
tombi-severity-level.workspace = true
tombi-text.workspace = true
tombi-uri.workspace = true
tombi-validator.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["fs", "macros"] }
tombi-schema-store = { workspace = true, features = ["native"] }
tombi-test-lib.workspace = true
