[package]
name = "tombi-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
drop_bomb.workspace = true
itertools.workspace = true
thiserror.workspace = true
tombi-ast.workspace = true
tombi-config.workspace = true
tombi-diagnostic = { workspace = true, optional = true }
tombi-document-tree.workspace = true
tombi-lexer.workspace = true
tombi-rg-tree.workspace = true
tombi-syntax.workspace = true
tombi-text.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
textwrap.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["diagnostic"]
diagnostic = ["dep:tombi-diagnostic"]
