[package]
name = "tombi-pep508"
version = "0.0.0-dev"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tombi-text = { workspace = true }
tombi-rg-tree = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
