[package]
name = "tombi-rg-tree"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
description = "A `Red/Green Tree` implementation."
license.workspace = true

[dependencies]
countme.workspace = true
hashbrown.workspace = true
itertools.workspace = true
rustc-hash.workspace = true
tombi-text.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = []
