[package]
name = "tombi-schema-store"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
getrandom = { version = "0.2", default-features = false, features = ["js"] }
glob.workspace = true
gloo-net = { workspace = true, optional = true }
indexmap.workspace = true
itertools.workspace = true
regex.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tombi-ast.workspace = true
tombi-config.workspace = true
tombi-document.workspace = true
tombi-document-tree.workspace = true
tombi-json.workspace = true
tombi-text.workspace = true
tombi-x-keyword.workspace = true
tombi-wasm-compat.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true

[features]
default = ["native"]
native = ["reqwest"]
wasm = ["gloo-net"]
