[package]
name = "tombi-schema-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
bytes.workspace = true
futures.workspace = true
glob.workspace = true
gloo-net = { workspace = true, optional = true }
indexmap.workspace = true
itertools.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
surf = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tombi-ast.workspace = true
tombi-cache.workspace = true
tombi-config.workspace = true
tombi-document-tree = { workspace = true, optional = true }
tombi-future.workspace = true
tombi-json.workspace = true
tombi-text.workspace = true
tombi-uri.workspace = true
tombi-x-keyword.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true

[features]
default = ["native"]
document-tree = ["dep:tombi-document-tree"]
gloo-net06 = ["dep:gloo-net"]
native = ["reqwest01", "tombi-future/native"]
reqwest01 = ["dep:reqwest"]
surf2 = ["dep:surf"]
wasm = ["gloo-net06", "tombi-future/wasm"]
