[package]
name = "tombi-severity-level"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true }

[features]
jsonschema = ["dep:schemars"]
serde = ["dep:serde"]
