[package]
name = "tombi-toml-version"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = ["clap", "serde"]
clap = ["dep:clap"]
jsonschema = ["dep:schemars"]
serde = ["dep:serde"]
